width issu fixed

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-<div class="container py-5">
-  <form id="taxForm pt-5">
+<div class="container1 py-5">
+  <form id="taxForm" class="w-100">
     <label for="grossIncome" class="d-flex align-items-center mb-2 mt-3 gap-3">Enter gross annual income <span class="gide-quetion-mard" data-bs-toggle="tooltip" data-bs-placement="top" title="Gross annual income is your total salary in a year before any deductions">?</span></label>
     <input type="number" required id="grossIncome" placeholder="Enter gross annual income">
 
